<resources>
    <string name="app_name">Recipe App</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="todo">TODO</string>
    <string name="high_to_low">High to Low</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="meal_type">Meal Type</string>
    <string name="breakfast">Breakfast</string>
    <string name="low_to_high">Low to High</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="set_preferences">Set Preferences</string>
    <string name="recipes">Recipes</string>
    <string name="preferences">Preferences</string>
    <string name="favourites">Favourites</string>
</resources>
