<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="se.ecutb.jonatan.recipeApp.pages.Preferences">

    <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/set_preferences"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:text="@string/cooking_time"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:text="@string/meal_type"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/radio" />

    <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="176dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
                android:id="@+id/radioLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_to_high" />

        <RadioButton
                android:id="@+id/radioHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_to_low" />

    </RadioGroup>

    <RadioGroup
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="156dp"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
                android:id="@+id/radioBreakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast" />

        <RadioButton
                android:id="@+id/radioLunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch" />

        <RadioButton
                android:id="@+id/radioDinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>