<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="se.ecutb.jonatan.recipeApp.MainActivity"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
            android:id="@+id/myCardView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="5.5">


            <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:weightSum="2"
                    android:baselineAligned="false">

                <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"
                        android:orientation="vertical"
                        android:padding="10dp">

                    <TextView
                            android:id="@+id/tvTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="@string/title"
                            android:textColor="@color/colorPrimary"
                            android:textSize="22sp"
                            android:textStyle="bold"

                            tools:layout_conversion_absoluteHeight="30dp"
                            tools:layout_conversion_absoluteWidth="45dp"
                            tools:layout_editor_absoluteX="18dp"
                            tools:layout_editor_absoluteY="15dp" />

                    <TextView
                            android:id="@+id/tvTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:text="@string/time"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="14sp"
                            android:textStyle="italic"
                            tools:layout_conversion_absoluteHeight="19dp"
                            tools:layout_conversion_absoluteWidth="32dp"
                            tools:layout_editor_absoluteX="18dp"
                            tools:layout_editor_absoluteY="45dp" />

                    <TextView
                            android:id="@+id/tvType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:text="@string/type"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryLight"
                            android:textSize="14sp"

                            tools:layout_conversion_absoluteHeight="19dp"
                            tools:layout_conversion_absoluteWidth="31dp"
                            tools:layout_editor_absoluteX="18dp"
                            tools:layout_editor_absoluteY="64dp" />


                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".7"
                        android:gravity="center"

                        >

                    <ImageButton
                            android:id="@+id/button"
                            android:layout_width="41dp"
                            android:layout_height="34dp"
                            android:layout_marginTop="45dp"
                            android:layout_marginBottom="46dp"
                            android:background="@null"
                            android:src="@drawable/ic_star_border_black_24dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="@string/todo" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>